--- a/src/index.css
+++ b/src/index.css
@@ -12,23 +12,33 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  display: flex;
+  justify-content: center;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  /* display: flex; */
+  /* place-items: center; */
+  /* justify-content: center; */
   min-width: 320px;
+  max-width: 1280px;
   min-height: 100vh;
+}
+
+html {
+  background-color: black !important;
 }
 
 h1 {
@@ -66,4 +76,13 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+p {
+  color: white;
+  margin: 0;
+}
+
+li {
+  color: white;
 }
