--- a/src/components/Advantages/reason.css
+++ b/src/components/Advantages/reason.css
@@ -1,19 +1,23 @@
-.reason-cont {
+.parent-cont {
     display: flex;
+}
+
+.reason-cont {
+    display: inline-flex;
     align-items: center;
+    max-width: fit-content;
+    flex-shrink: 0;
 }
 
 .img {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     margin-right: 40px;
 }
 
 .info-cont {
-    /* display: flex;
-    flex-direction: column; */
-    max-width: 350px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
 }
