--- a/src/sections/Advantages.scss
+++ b/src/sections/Advantages.scss
@@ -1,4 +1,6 @@
 #advantages {
+    // display: flex;
+    // justify-content: center;
 
     .container {
         margin-bottom: 200px;
@@ -11,14 +13,40 @@
         margin-bottom: 80px;
     }
     
+    // .reasons {
+    //     // display: grid;
+    //     // grid-template-columns: 1fr 1fr;
+    //     // justify-content: space-between;
+    //     // display: flex;
+    //     // justify-content: space-between;
+    //     display: grid;
+    //     grid-template-columns: 1fr auto;
+    //     gap: 20px;
+    // }
+
     .reasons {
-        // display: grid;
-        // grid-template-columns: 1fr 1fr;
-        // justify-content: space-between;
-        // display: flex;
-        // justify-content: space-between;
         display: grid;
         grid-template-columns: 1fr auto;
-        gap: 80px;
+        // justify-content: space-between;
+        gap: 50px;
+    }
+
+    @media (width < 1000px) {
+        .section-title {
+            text-align: center;
+        }
+
+        .reasons {
+            grid-template-columns: auto auto;
+        }
+    }
+
+    @media (width < 750px) {
+        display: flex;
+        justify-content: center;
+
+        .reasons {
+            grid-template-columns: auto;
+        }
     }
 }
