Modified global css, added About w/ Slideshow comp

--- a/src/sections/Advantages.scss
+++ b/src/sections/Advantages.scss
@@ -3,14 +3,11 @@
     // justify-content: center;
 
     .container {
-        margin-bottom: 200px;
+        // margin-bottom: 200px;
     }
     
-    .section-title {
-        font-size: 64px;
-        text-align: left;
-        font-weight: 700;
-        margin-bottom: 80px;
+    h1 {
+        margin-bottom: 100px !important;
     }
     
     // .reasons {
