--- a/src/sections/Nav.scss
+++ b/src/sections/Nav.scss
@@ -1,8 +1,9 @@
 nav {
     display: flex;
     justify-content: center;
-    box-sizing: border-box;
-    margin: 0 40px;
+    // box-sizing: border-box;
+    // margin: 0 40px;
+    // padding: 0 20px;
     // max-width: 100%;
 
     .container {
@@ -15,6 +16,8 @@ nav {
         justify-content: space-between;
         align-items: center;
         z-index: 100;
+        box-sizing: border-box;
+        padding: 0 20px;
     }
 
     .logo {
