--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,17 @@ html {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-bottom: 100px;
+}
+
+nav {
+  margin: 0 20px;
+}
+
+section:nth-child(n+3) {
+  margin-bottom: 250px;
+  box-sizing: border-box;
+  padding: 0 20px;
 }
 
 button {
