--- a/src/sections/Home.scss
+++ b/src/sections/Home.scss
@@ -31,7 +31,7 @@
     }
 
     .img-cont {
-        background-color: blue;
+        // background-color: blue;
         position: relative;
         overflow: hidden;
         width: 100%;
@@ -42,7 +42,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        box-shadow: inset 0px 0px 50px 80px rgb(0, 0, 0);
+        box-shadow: inset 0px 20px 45px 90px rgb(0, 0, 0);
         width: 100%;
         height: 100%;
     }
