--- a/src/sections/Membership.scss
+++ b/src/sections/Membership.scss
@@ -23,7 +23,7 @@
         display: grid;
         grid-template-columns: auto auto auto;
         justify-content: space-between;
-        padding: 0 100px;
+        // padding: 0 100px;
         gap: 20px;
     }
 
@@ -68,5 +68,10 @@
         // #pass {
         //     flex: 0 0 auto;
         // }
+
+        .passes {
+            // justify-content: center;
+            padding: 0 20px;
+        }
     }
 }
