--- a/src/sections/Advantages.scss
+++ b/src/sections/Advantages.scss
@@ -1,30 +1,13 @@
 #advantages {
-    // display: flex;
-    // justify-content: center;
-
-    .container {
-        // margin-bottom: 200px;
-    }
     
     h1 {
         margin-bottom: 100px !important;
     }
-    
-    // .reasons {
-    //     // display: grid;
-    //     // grid-template-columns: 1fr 1fr;
-    //     // justify-content: space-between;
-    //     // display: flex;
-    //     // justify-content: space-between;
-    //     display: grid;
-    //     grid-template-columns: 1fr auto;
-    //     gap: 20px;
-    // }
 
     .reasons {
         display: grid;
-        grid-template-columns: 1fr auto;
-        // justify-content: space-between;
+        grid-template-columns: auto auto;
+        justify-content: space-between;
         gap: 50px;
     }
 
