--- a/src/sections/Home.scss
+++ b/src/sections/Home.scss
@@ -25,13 +25,13 @@
         z-index: 100;
         height: 660px;
     }
-
+    
     .title {
         font-size: 48px;
+        padding-left: 20px;
     }
 
     .img-cont {
-        // background-color: blue;
         position: relative;
         overflow: hidden;
         width: 100%;
@@ -64,6 +64,7 @@
     @media (width < 750px) {
         .title {
             text-align: center;
+            padding-left: 0;
         }
     }
 }
