Footer finished and added social media button comp

--- a/src/components/Team/Trainer.css
+++ b/src/components/Team/Trainer.css
@@ -30,7 +30,7 @@
     gap: 20px;
 }
 
-.instagram,
+/* .instagram,
 .twitter,
 .youtube {
     width: 40px;
@@ -60,4 +60,4 @@
 .twitter:hover .twitter-icon,
 .youtube:hover .yt-icon {
     color: yellow;
-}
+} */
