--- a/src/sections/Nav.scss
+++ b/src/sections/Nav.scss
@@ -22,6 +22,7 @@ nav {
 
     .logo {
         font-size: 24px;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     }
 
     .sub-logo {
