--- a/src/sections/Nav.scss
+++ b/src/sections/Nav.scss
@@ -15,29 +15,75 @@ nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        z-index: 100;
+        z-index: 1000;
         box-sizing: border-box;
         padding: 0 20px;
     }
 
-    ul {
+    ul  {
         list-style-type: none;
         display: flex;
         gap: 75px;
-        font-size: 15px;
+        font-size: 18px;
+    }
+
+    ul li {
+        cursor: pointer;
+        transition: .4s;
+    }
+
+    .nav-menu li:hover {
+        color: yellow;
+    }
+
+    .hamburger {
+            display: none;
     }
 
     @media (width < 750px) {
+        z-index: 1000;
+
         .container {
             margin-top: 40px;
         }
 
         ul {
-            display: none;
+            display: flex;
+            flex-direction: column;
         }
 
         .logo {
             font-size: 32px;
+        }
+
+        .hamburger {
+            display: block;
+            cursor: pointer;
+            z-index: 999;
+            color: yellow;
+            font-size: 30px;
+        }
+
+        // .nav-menu-cont {
+        //     display: none;
+        // }
+
+        .nav-menu {
+            position: absolute;
+            left: -100%;
+            top: 95px;
+            flex-direction: column;
+            background-color: rgba(0,0,0,.9);
+            width: 100%;
+            height: 50vh;
+            text-align: center;
+            transition: .3s;
+            // padding-top: 100px;
+        }
+    
+        .nav-menu.active {
+            left: 0;
+            // padding: 100px 0;
         }
     }
 }
