--- a/src/sections/Home.scss
+++ b/src/sections/Home.scss
@@ -35,7 +35,7 @@
         position: relative;
         overflow: hidden;
         width: 100%;
-        background-color: red;
+        // background-color: red;
     }
     
     .img-cont::after {
