--- a/src/sections/Nav.scss
+++ b/src/sections/Nav.scss
@@ -11,13 +11,15 @@ nav {
         max-width: 1280px;
         position: absolute;
         // top: 30px;
-        margin-top: 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         z-index: 1000;
         box-sizing: border-box;
         padding: 0 20px;
+        display: flex;
+        flex-direction: row;
+        // background-color: blue;
     }
 
     ul  {
@@ -45,12 +47,14 @@ nav {
         z-index: 1000;
 
         .container {
-            margin-top: 40px;
         }
 
         ul {
             display: flex;
             flex-direction: column;
+            padding: 0;
+            height: 100%;
+            margin: 80px 0;
         }
 
         .logo {
@@ -77,11 +81,13 @@ nav {
         .nav-menu {
             position: absolute;
             left: -100%;
-            top: 95px;
+            top: 48px;
+            display: flex;
             flex-direction: column;
             background-color: rgba(0,0,0,.9);
+            // background-color: red;
             width: 100%;
-            height: 50vh;
+            height: 90vh;
             text-align: center;
             transition: .3s;
             // padding-top: 100px;
